--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,43 @@
 	<!-- =========================================section MAIN-PAGE======================================= -->
 
 	<section class="main-page" id="main-page">
+			<div class="calculator">
+			<div class="calculator_screen"></div>
+			<div class="calculator_buttons">
+				<div class="logo">RS School calculator</div>
+				<div class="button redo"></div>
+				<div class="button mu"></div>
+				<div class="button gt"></div>
+				<div class="button on"></div>
+				<div class="button num">7</div>
+				<div class="button num">8</div>
+				<div class="button num">9</div>
+				<div class="button percent"></div>
+				<div class="button sqrt"></div>
+				<div class="button mc"></div>
+				<div class="button ac"></div>
+				<div class="button num">4</div>
+				<div class="button num">5</div>
+				<div class="button num">6</div>
+				<div class="button mult"></div>
+				<div class="button delim"></div>
+				<div class="button mr"></div>
+				<div class="button negative"></div>
+				<div class="button num">1</div>
+				<div class="button num">2</div>
+				<div class="button num">3</div>
+				<div class="button minus"></div>
+				<div class="button plus"></div>
+				<div class="button m-"></div>
+				<div class="button c"></div>
+				<div class="button num">0</div>
+				<div class="button num">00</div>
+				<div class="button point"></div>
+				<div class="button plus"></div>
+				<div class="button res"></div>
+				<div class="button m+"></div>
+				</div>
+			</div>
 	</section>
 	<!-- ================================================SCRIPTS============================================= -->
 	<script type="text/javascript" src="assets/js/common.js"></script>
