--- a/app/index.html
+++ b/app/index.html
@@ -30,21 +30,21 @@
 				<div class="button num">4</div>
 				<div class="button num">5</div>
 				<div class="button num">6</div>
-				<div class="button mult"></div>
-				<div class="button delim"></div>
+				<div class="button mult">*</div>
+				<div class="button division"></div>
 				<div class="button mr"></div>
 				<div class="button negative"></div>
 				<div class="button num">1</div>
 				<div class="button num">2</div>
 				<div class="button num">3</div>
-				<div class="button minus"></div>
-				<div class="button plus"></div>
+				<div class="button minus">-</div>
+				<div class="button plus">+</div>
 				<div class="button m-"></div>
 				<div class="button c"></div>
 				<div class="button num">0</div>
 				<div class="button num">00</div>
 				<div class="button point"></div>
-				<div class="button plus"></div>
+				<div class="button plus">+</div>
 				<div class="button res"></div>
 				<div class="button m+"></div>
 				</div>
