feat: add basics js

--- a/app/index.html
+++ b/app/index.html
@@ -23,29 +23,29 @@
 				<div class="button num">7</div>
 				<div class="button num">8</div>
 				<div class="button num">9</div>
-				<div class="button percent"></div>
-				<div class="button sqrt"></div>
+				<div class="button percent operation"></div>
+				<div class="button sqrt operation"></div>
 				<div class="button mc"></div>
-				<div class="button ac"></div>
+				<div class="button all_clear"></div>
 				<div class="button num">4</div>
 				<div class="button num">5</div>
 				<div class="button num">6</div>
-				<div class="button mult">*</div>
-				<div class="button division"></div>
+				<div class="button mult operation">*</div>
+				<div class="button division operation">/</div>
 				<div class="button mr"></div>
 				<div class="button negative"></div>
 				<div class="button num">1</div>
 				<div class="button num">2</div>
 				<div class="button num">3</div>
-				<div class="button minus">-</div>
-				<div class="button plus">+</div>
+				<div class="button minus operation">-</div>
+				<div class="button plus operation">+</div>
 				<div class="button m-"></div>
-				<div class="button c"></div>
+				<div class="button clear"></div>
 				<div class="button num">0</div>
 				<div class="button num">00</div>
-				<div class="button point"></div>
-				<div class="button plus">+</div>
-				<div class="button res"></div>
+				<div class="button point" id="point"></div>
+				<div class="button plus operation">+</div>
+				<div class="button result"></div>
 				<div class="button m+"></div>
 				</div>
 			</div>
