feat: add js functions

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
 	<section class="main-page" id="main-page">
 			<div class="calculator">
-			<div class="calculator_screen"></div>
+			<div class="calculator_screen">0</div>
 			<div class="calculator_buttons">
 				<div class="logo">RS School calculator</div>
 				<div class="button redo"></div>
@@ -43,7 +43,7 @@
 				<div class="button clear"></div>
 				<div class="button num">0</div>
 				<div class="button num">00</div>
-				<div class="button point" id="point"></div>
+				<div class="button decimal"></div>
 				<div class="button plus operation">+</div>
 				<div class="button result"></div>
 				<div class="button m+"></div>
