feat: add putial functions

--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,8 @@
 				<div class="button num">7</div>
 				<div class="button num">8</div>
 				<div class="button num">9</div>
-				<div class="button percent operation"></div>
-				<div class="button sqrt operation"></div>
+				<div class="button percent"></div>
+				<div class="button sqrt"></div>
 				<div class="button mc"></div>
 				<div class="button all_clear"></div>
 				<div class="button num">4</div>
@@ -45,7 +45,7 @@
 				<div class="button num">00</div>
 				<div class="button decimal"></div>
 				<div class="button plus operation">+</div>
-				<div class="button result"></div>
+				<div class="button result operation"></div>
 				<div class="button m+"></div>
 				</div>
 			</div>
