--- a/app/index.html
+++ b/app/index.html
@@ -39,14 +39,14 @@
 				<div class="button num">3</div>
 				<div class="button minus operation">-</div>
 				<div class="button plus operation">+</div>
-				<div class="button m-"></div>
+				<div class="button m_minus"></div>
 				<div class="button clear"></div>
 				<div class="button num">0</div>
 				<div class="button num">00</div>
 				<div class="button decimal"></div>
 				<div class="button plus operation">+</div>
 				<div class="button result operation"></div>
-				<div class="button m+"></div>
+				<div class="button m_plus"></div>
 				</div>
 			</div>
 	</section>
