--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
 				<div class="button num">00</div>
 				<div class="button decimal"></div>
 				<div class="button plus operation">+</div>
-				<div class="button result operation"></div>
+				<div class="button result"></div>
 				<div class="button m_plus"></div>
 				</div>
 			</div>
