feat: add animations

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
 
 	<section class="main-page" id="main-page">
 			<div class="calculator">
+				<div class="boot_block">Welcome to RS_Calc</div>
 			<div class="calculator_screen">0</div>
 			<div class="calculator_buttons">
 				<div class="logo">RS School calculator</div>
