fix: some fixes + favicon

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+	<title>RSS Calculator</title>
+	<link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -51,12 +52,12 @@
 				</div>
 			</div>
 			<div class="faq">
-				<p>Как пользоваться калькулятором ( 14-ти разрядным).</p>
+				<p>HELP: калькулятор 14 разрядный (включить [ ON ]).</p>
 				<p>1.Кнопка [►] удаляет полседнюю цифру с табло.</p>
 				<p>2. Кнопка X<sup>n</sup>возводит X в степень n.<br> Пример: Найти 2<sup>3</sup>: 2 > [X<sup>n</sup>] > 3 > [ = ] > 8.</p> 
 				<p>3. Кнопка [ % ]. Пример: найти 10% от 150: 150 > [ * ] > 10 > [ % ] будет 15. Пример: прибавить 10% к 150: 150 > [ + ] > 10 > [ % ] будет 165 </p>
-				<p>4. Реализована функция повторения поcледнего действия: 2 > [ + ] > 3 > [=] при повторных нажатиях [ = ] будет прибавлять по 3(либо другую операцию)</p>
-				<p> 5. Десятичная дробь - [ . ], если нужно число <1 можно жать сразу [ . ] без нуля.</p>
+				<p>4. Реализована функция повторения поcледнего действия: 2 > [ + ] > 3 > [=] при повторных нажатиях <br>[ = ] будет прибавлять по 3(либо другую операцию)</p>
+				<p> 5. Десятичная дробь - [ . ] если нужно число <1 можно жать сразу [ . ] без нуля.</p>
 				<p>6. Память. [M+] - добавляет число с дисплея в память - загорится индикатор М. [M-] отнимает число с экрана из памяти.[MR] - чтение из памяти. [MC] - очистить память.</p>
 				<p>7. Кнопка [C] и [ON] очищают экран и убирают ошибку вычислений. [AC] также очищает память</p>
 				<p>8. Ошибка вычисления (индикатор E) возникает при превышении 14 целочисленных разрядов, попытке извлечь корень из отрицательного числа и тд.</p>
