fix: some fixes

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,9 @@
 				<p>8. Ошибка вычисления (индикатор E) возникает при превышении 14 целочисленных разрядов, попытке извлечь корень из отрицательного числа и тд.</p>
 				<p>9. Чисто в эстетических целях, калькулятор не производит оперции с числами меньше 10e-7, выводит "0";
 				</p>
-				
+				<div class="close">
+					<span></span><span></span>
+				</div>
 			</div>
 	</section>
 	<!-- ================================================SCRIPTS============================================= -->
