fix: some fixes

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -59,9 +59,9 @@
 				<p>4. Реализована функция повторения поcледнего действия: 2 > [ + ] > 3 > [=] при повторных нажатиях <br>[ = ] будет прибавлять по 3(либо другую операцию)</p>
 				<p> 5. Десятичная дробь - [ . ] если нужно число <1 можно жать сразу [ . ] без нуля.</p>
 				<p>6. Память. [M+] - добавляет число с дисплея в память - загорится индикатор М. [M-] отнимает число с экрана из памяти.[MR] - чтение из памяти. [MC] - очистить память.</p>
-				<p>7. Кнопка [C] и [ON] очищают экран и убирают ошибку вычислений. [AC] также очищает память</p>
+				<p>7. Кнопка [C] и [AC] очищают экран и убирают ошибку вычислений. [AC] также очищает память</p>
 				<p>8. Ошибка вычисления (индикатор E) возникает при превышении 14 целочисленных разрядов, попытке извлечь корень из отрицательного числа и тд.</p>
-				<p>9. Чисто в эстетических целях, калькулятор не производит оперции с числами меньше 10e-7, выводит "0";
+				<p>9. ***Реализована неэкспоненциальная запись результатов (< 10e-7) !!!;
 				</p>
 				<div class="close">
 					<span></span><span></span>
